Проверка кода в соответствии с кодгайдом академии

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li class="navigation__item">
               <a class="navigation__link navigation__link--catalog" href="#">
                 <span class="navigation__link-text">Каталог</span>
-                <svg class="navigation__link-icon" width="16" height="17" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3.8 7.05a.67.67 0 1 0-.93.95l4.66 4.66a.66.66 0 0 0 .95 0L13.14 8a.67.67 0 0 0-.94-.95L8 11.25l-4.2-4.2Z"/></svg>
+                <svg class="navigation__link-icon" width="16" height="17" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3.8 7.05a.67.67 0 1 0-.93.95l4.66 4.66a.66.66 0 0 0 .95 0L13.14 8a.67.67 0 0 0-.94-.95L8 11.25l-4.2-4.2Z"></svg>
               </a>
               <span class="visually-hidden">Открыть дополнительное меню каталога.</span>
               <div class="popup popup--hidden dropdown-menu">
@@ -53,21 +53,21 @@
           <ul class="navigation__list navigation-user__list">
             <li class="navigation__item navigation-user__item">
               <a class="navigation__link navigation-user__link navigation__link--search" href="#">
-                <svg class="navigation__link-icon navigation__link-icon--search" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M2.66 7.33a4.67 4.67 0 1 1 9.34 0 4.67 4.67 0 0 1-9.34 0Zm8.42 4.69a6 6 0 1 1 .94-.94l2.45 2.45a.67.67 0 1 1-.94.94l-2.45-2.45Z"/></svg>
+                <svg class="navigation__link-icon navigation__link-icon--search" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M2.66 7.33a4.67 4.67 0 1 1 9.34 0 4.67 4.67 0 0 1-9.34 0Zm8.42 4.69a6 6 0 1 1 .94-.94l2.45 2.45a.67.67 0 1 1-.94.94l-2.45-2.45Z"></svg>
                 <span class="visually-hidden">Поиск.</span>
               </a>
               <div class="popup popup--search popup--hidden">
                 <form class="form" action="https://echo.htmlacademy.ru/" method="post">
                   <input class="form__input popup__input" type="text" name="search" placeholder="Поиск по сайту">
                   <button class="popup__clear-button popup__clear-button--hidden" type="reset">
-                    <svg class="popup__clear-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.8 4.14a.67.67 0 1 0-.94-.94L8 7.06 4.14 3.2a.67.67 0 1 0-.94.94L7.06 8 3.2 11.86a.67.67 0 1 0 .94.94L8 8.94l3.86 3.86a.67.67 0 1 0 .94-.94L8.94 8l3.86-3.86Z"/></svg>
+                    <svg class="popup__clear-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.8 4.14a.67.67 0 1 0-.94-.94L8 7.06 4.14 3.2a.67.67 0 1 0-.94.94L7.06 8 3.2 11.86a.67.67 0 1 0 .94.94L8 8.94l3.86 3.86a.67.67 0 1 0 .94-.94L8.94 8l3.86-3.86Z"></svg>
                   </button>
                 </form>
               </div>
             </li>
             <li class="navigation__item navigation-user__item">
               <a class="navigation__link navigation-user__link navigation-user__link--login" href="#">
-                <svg class="navigation__link-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M9 1.67c0-.37.3-.67.67-.67h2.66a2 2 0 0 1 2 2v9.33a2 2 0 0 1-2 2H9.67a.67.67 0 1 1 0-1.33h2.66a.67.67 0 0 0 .67-.67V3a.67.67 0 0 0-.67-.67H9.67A.67.67 0 0 1 9 1.67Zm-3.14 2.2a.67.67 0 0 1 .94 0l3.33 3.32a.69.69 0 0 1 .13.18.66.66 0 0 1-.13.77L6.8 11.47a.67.67 0 1 1-.94-.94l2.2-2.2h-6.4a.67.67 0 1 1 0-1.33h6.4l-2.2-2.2a.67.67 0 0 1 0-.94Z"/></svg>
+                <svg class="navigation__link-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M9 1.67c0-.37.3-.67.67-.67h2.66a2 2 0 0 1 2 2v9.33a2 2 0 0 1-2 2H9.67a.67.67 0 1 1 0-1.33h2.66a.67.67 0 0 0 .67-.67V3a.67.67 0 0 0-.67-.67H9.67A.67.67 0 0 1 9 1.67Zm-3.14 2.2a.67.67 0 0 1 .94 0l3.33 3.32a.69.69 0 0 1 .13.18.66.66 0 0 1-.13.77L6.8 11.47a.67.67 0 1 1-.94-.94l2.2-2.2h-6.4a.67.67 0 1 1 0-1.33h6.4l-2.2-2.2a.67.67 0 0 1 0-.94Z"></svg>
                 <span>Вход</span>
               </a>
               <div class="popup popup--login popup--hidden">
@@ -83,7 +83,7 @@
             </li>
             <li class="navigation__item navigation-user__item">
               <a class="navigation__link navigation-user__link navigation-user__link--cart" href="#">
-                <svg class="navigation__link-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="17" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 2.1a.67.67 0 0 0 0 1.34h1.77l.47 2.34v.05l.97 4.83a1.83 1.83 0 0 0 1.82 1.47h5.62a1.83 1.83 0 0 0 1.82-1.47l.93-4.86a.67.67 0 0 0-.66-.8h-9.3l-.47-2.36a.67.67 0 0 0-.66-.53H1.17Zm4.52 8.3-.81-4.06h8.23l-.78 4.07a.5.5 0 0 1-.49.39H6.18a.5.5 0 0 1-.49-.4Zm-1.13 3.96a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z"/></svg>
+                <svg class="navigation__link-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="17" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 2.1a.67.67 0 0 0 0 1.34h1.77l.47 2.34v.05l.97 4.83a1.83 1.83 0 0 0 1.82 1.47h5.62a1.83 1.83 0 0 0 1.82-1.47l.93-4.86a.67.67 0 0 0-.66-.8h-9.3l-.47-2.36a.67.67 0 0 0-.66-.53H1.17Zm4.52 8.3-.81-4.06h8.23l-.78 4.07a.5.5 0 0 1-.49.39H6.18a.5.5 0 0 1-.49-.4Zm-1.13 3.96a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z"></svg>
                 <span class="visually-hidden">Корзина.</span>
                 <span class="navigation__text">2 товара</span>
                 <span class="navigation__text navigation__text--hidden">Нет товаров</span>
@@ -106,7 +106,7 @@
                       <output class="cart__price">310</output> ₽
                     </span>
                     <button class="cart__delete-item-button" type="button">
-                      <svg class="cart__delete-item-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.8 4.14a.67.67 0 1 0-.94-.94L8 7.06 4.14 3.2a.67.67 0 1 0-.94.94L7.06 8 3.2 11.86a.67.67 0 1 0 .94.94L8 8.94l3.86 3.86a.67.67 0 1 0 .94-.94L8.94 8l3.86-3.86Z"/></svg>
+                      <svg class="cart__delete-item-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.8 4.14a.67.67 0 1 0-.94-.94L8 7.06 4.14 3.2a.67.67 0 1 0-.94.94L7.06 8 3.2 11.86a.67.67 0 1 0 .94.94L8 8.94l3.86 3.86a.67.67 0 1 0 .94-.94L8.94 8l3.86-3.86Z"></svg>
                       <span class="visually-hidden">Удалить из корзины.</span>
                     </button>
                   </li>
@@ -125,7 +125,7 @@
                       <output class="cart__price">480</output> ₽
                     </span>
                     <button class="cart__delete-item-button" type="button">
-                      <svg class="cart__delete-item-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.8 4.14a.67.67 0 1 0-.94-.94L8 7.06 4.14 3.2a.67.67 0 1 0-.94.94L7.06 8 3.2 11.86a.67.67 0 1 0 .94.94L8 8.94l3.86 3.86a.67.67 0 1 0 .94-.94L8.94 8l3.86-3.86Z"/></svg>
+                      <svg class="cart__delete-item-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.8 4.14a.67.67 0 1 0-.94-.94L8 7.06 4.14 3.2a.67.67 0 1 0-.94.94L7.06 8 3.2 11.86a.67.67 0 1 0 .94.94L8 8.94l3.86 3.86a.67.67 0 1 0 .94-.94L8.94 8l3.86-3.86Z"></svg>
                       <span class="visually-hidden">Удалить из корзины.</span>
                     </button>
                   </li>
@@ -163,11 +163,11 @@
               <img class="slider__image" src="img/strawberyy-ice-cream.png" alt="Нежный пломбир
               с клубничным джемом." width="327" height="507">
               <button class="slider__button-arrow slider__button-arrow--left" type="button">
-                <svg class="slider__button-arrow-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M9.71 13.14a.67.67 0 0 0 .94-.95L6.45 8l4.2-4.2a.66.66 0 0 0-.94-.94L5.04 7.52a.66.66 0 0 0 0 .94l4.67 4.68Z"/></svg>
+                <svg class="slider__button-arrow-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M9.71 13.14a.67.67 0 0 0 .94-.95L6.45 8l4.2-4.2a.66.66 0 0 0-.94-.94L5.04 7.52a.66.66 0 0 0 0 .94l4.67 4.68Z"></svg>
                 <span class="visually-hidden">Показать предыдущее изображение.</span>
               </button>
               <button class="slider__button-arrow slider__button-arrow--right" type="button">
-                <svg class="slider__button-arrow-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M7.29 2.86a.66.66 0 1 0-.94.95l4.2 4.2-4.2 4.2a.67.67 0 0 0 .94.94l4.67-4.67a.66.66 0 0 0 0-.94L7.3 2.86Z"/></svg>
+                <svg class="slider__button-arrow-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M7.29 2.86a.66.66 0 1 0-.94.95l4.2 4.2-4.2 4.2a.67.67 0 0 0 .94.94l4.67-4.67a.66.66 0 0 0 0-.94L7.3 2.86Z"></svg>
                 <span class="visually-hidden">Показать следующее изображение.</span>
               </button>
             </li>
@@ -250,7 +250,7 @@
                 <span class="goods__price-type">₽/кг</span>
               </p>
               <button class="goods__cart-button" type="button">
-                <svg class="goods__cart-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" role="img" aria-label="Добавить в корзину." fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z"/></svg>
+                <svg class="goods__cart-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" role="img" aria-label="Добавить в корзину." fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z"></svg>
               </button>
             </li>
             <li class="goods__item">
@@ -268,7 +268,7 @@
                 <span class="goods__price-type">₽/кг</span>
               </p>
               <button class="goods__cart-button" type="button">
-                <svg class="goods__cart-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" role="img" aria-label="Добавить в корзину." fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z"/></svg>
+                <svg class="goods__cart-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" role="img" aria-label="Добавить в корзину." fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z"></svg>
               </button>
             </li>
             <li class="goods__item">
@@ -287,7 +287,7 @@
                   <span class="goods__price-type">₽/кг</span>
                 </p>
               <button class="goods__cart-button" type="button">
-                <svg class="goods__cart-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" role="img" aria-label="Добавить в корзину." fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z"/></svg>
+                <svg class="goods__cart-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" role="img" aria-label="Добавить в корзину." fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z"></svg>
               </button>
             </li>
             <li class="goods__item">
@@ -307,7 +307,7 @@
                 <span class="goods__price-type">₽/кг</span>
               </p>
               <button class="goods__cart-button" type="button">
-                <svg class="goods__cart-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" role="img" aria-label="Добавить в корзину." fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z"/></svg>
+                <svg class="goods__cart-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" role="img" aria-label="Добавить в корзину." fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z"></svg>
               </button>
             </li>
           </ul>
@@ -445,7 +445,7 @@
     <div class="modal modal--closed">
       <div class="modal__content">
         <button class="modal__close-button" type="button">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M15.89 5.05a.67.67 0 0 0-.95-.94L10 9.06 5.05 4.1a.67.67 0 1 0-.94.94L9.06 10 4.1 14.94a.67.67 0 1 0 .94.95L10 10.94l4.94 4.95a.67.67 0 1 0 .95-.95L10.94 10l4.95-4.95Z" fill="#2D3440"/></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M15.89 5.05a.67.67 0 0 0-.95-.94L10 9.06 5.05 4.1a.67.67 0 1 0-.94.94L9.06 10 4.1 14.94a.67.67 0 1 0 .94.95L10 10.94l4.94 4.95a.67.67 0 1 0 .95-.95L10.94 10l4.95-4.95Z" fill="#2D3440"></svg>
           <span class="visually-hidden">Закрыть окно.</span>
         </button>
         <h2 class="modal__title">Мы обязательно ответим вам!</h2>
