--- a/catalog.html
+++ b/catalog.html
@@ -3,22 +3,41 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" href="favicon-32.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32.png">
     <title>HTML Academy: {{projectTitle}}</title>
   </head>
 <body>
   <header class="header">
     <div class="header__wrapper">
-      <a class="header__logo" href="#">
+      <a class="header__logo" href="index.html">
         <img class="logo-image"  src="img/logo.svg" alt="Логотип Глэйси." width="137" height="55">
       </a>
       <nav class="navigation navigation-site">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a class="navigation__link navigation__link--catalog" href="catalog.html">
+            <a class="navigation__link navigation__link--catalog" href="#">
               <span class="navigation__link-text">Каталог</span>
-              <svg class="navigation__link-icon" width="16" height="17" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3.8 7.05a.67.67 0 1 0-.93.95l4.66 4.66a.66.66 0 0 0 .95 0L13.14 8a.67.67 0 0 0-.94-.95L8 11.25l-4.2-4.2Z"/></svg>
+              <svg class="navigation__link-icon" width="16" height="17" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3.8 7.05a.67.67 0 1 0-.93.95l4.66 4.66a.66.66 0 0 0 .95 0L13.14 8a.67.67 0 0 0-.94-.95L8 11.25l-4.2-4.2Z"></svg>
             </a>
             <span class="visually-hidden">Открыть дополнительное меню каталога.</span>
+            <div class="popup popup--hidden dropdown-menu">
+              <h3 class="dropdown-menu__title">Новинки</h3>
+              <ul class="dropdown-menu__list">
+                <li class="dropdown-menu__item">
+                  <a class="dropdown-menu__link">Сливочное</a>
+                </li>
+                <li class="dropdown-menu__item">
+                  <a class="dropdown-menu__link" href="#">Щербеты</a>
+                </li>
+                <li class="dropdown-menu__item">
+                  <a class="dropdown-menu__link" href="#">Фруктовый лед</a>
+                </li>
+                <li class="dropdown-menu__item">
+                  <a class="dropdown-menu__link" href="#">Мелорин</a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="navigation__item">
             <a class="navigation__link" href="#">Доставка и оплата</a>
@@ -33,29 +52,102 @@
         <ul class="navigation__list navigation-user__list">
           <li class="navigation__item navigation-user__item">
             <a class="navigation__link navigation-user__link navigation__link--search" href="#">
-              <svg class="navigation__link-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M2.66 7.33a4.67 4.67 0 1 1 9.34 0 4.67 4.67 0 0 1-9.34 0Zm8.42 4.69a6 6 0 1 1 .94-.94l2.45 2.45a.67.67 0 1 1-.94.94l-2.45-2.45Z"/></svg>
+              <svg class="navigation__link-icon navigation__link-icon--search" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M2.66 7.33a4.67 4.67 0 1 1 9.34 0 4.67 4.67 0 0 1-9.34 0Zm8.42 4.69a6 6 0 1 1 .94-.94l2.45 2.45a.67.67 0 1 1-.94.94l-2.45-2.45Z"></svg>
               <span class="visually-hidden">Поиск.</span>
             </a>
+            <div class="popup popup--search popup--hidden">
+              <form class="form" action="https://echo.htmlacademy.ru/" method="post">
+                <input class="form__input popup__input" type="text" name="search" placeholder="Поиск по сайту">
+                <button class="popup__clear-button popup__clear-button--hidden" type="reset">
+                  <svg class="popup__clear-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.8 4.14a.67.67 0 1 0-.94-.94L8 7.06 4.14 3.2a.67.67 0 1 0-.94.94L7.06 8 3.2 11.86a.67.67 0 1 0 .94.94L8 8.94l3.86 3.86a.67.67 0 1 0 .94-.94L8.94 8l3.86-3.86Z"></svg>
+                </button>
+              </form>
+            </div>
           </li>
           <li class="navigation__item navigation-user__item">
             <a class="navigation__link navigation-user__link navigation-user__link--login" href="#">
-              <svg class="navigation__link-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M9 1.67c0-.37.3-.67.67-.67h2.66a2 2 0 0 1 2 2v9.33a2 2 0 0 1-2 2H9.67a.67.67 0 1 1 0-1.33h2.66a.67.67 0 0 0 .67-.67V3a.67.67 0 0 0-.67-.67H9.67A.67.67 0 0 1 9 1.67Zm-3.14 2.2a.67.67 0 0 1 .94 0l3.33 3.32a.69.69 0 0 1 .13.18.66.66 0 0 1-.13.77L6.8 11.47a.67.67 0 1 1-.94-.94l2.2-2.2h-6.4a.67.67 0 1 1 0-1.33h6.4l-2.2-2.2a.67.67 0 0 1 0-.94Z"/></svg>
+              <svg class="navigation__link-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M9 1.67c0-.37.3-.67.67-.67h2.66a2 2 0 0 1 2 2v9.33a2 2 0 0 1-2 2H9.67a.67.67 0 1 1 0-1.33h2.66a.67.67 0 0 0 .67-.67V3a.67.67 0 0 0-.67-.67H9.67A.67.67 0 0 1 9 1.67Zm-3.14 2.2a.67.67 0 0 1 .94 0l3.33 3.32a.69.69 0 0 1 .13.18.66.66 0 0 1-.13.77L6.8 11.47a.67.67 0 1 1-.94-.94l2.2-2.2h-6.4a.67.67 0 1 1 0-1.33h6.4l-2.2-2.2a.67.67 0 0 1 0-.94Z"></svg>
               <span>Вход</span>
             </a>
+            <div class="popup popup--login popup--hidden">
+              <h2 class="popup__title">Личный кабинет</h2>
+              <form class="form popup__form" action="https://echo.htmlacademy.ru/" method="post">
+                <input class="form__input popup__input popup__input--login" type="email" name="email" placeholder="email@example.com" required>
+                <input class="form__input popup__input popup__input--password" type="password" name="password" required>
+                <button class="button button--extra popup__form-button" type="submit">Войти</button>
+                <a class="popup__link popup__link--restore-password" href="#">Забыли пароль?</a>
+                <a class="popup__link popup__link--register" href="#">Регистрация</a>
+              </form>
+            </div>
           </li>
           <li class="navigation__item navigation-user__item">
             <a class="navigation__link navigation-user__link navigation-user__link--cart" href="#">
-              <svg class="navigation__link-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="17" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 2.1a.67.67 0 0 0 0 1.34h1.77l.47 2.34v.05l.97 4.83a1.83 1.83 0 0 0 1.82 1.47h5.62a1.83 1.83 0 0 0 1.82-1.47l.93-4.86a.67.67 0 0 0-.66-.8h-9.3l-.47-2.36a.67.67 0 0 0-.66-.53H1.17Zm4.52 8.3-.81-4.06h8.23l-.78 4.07a.5.5 0 0 1-.49.39H6.18a.5.5 0 0 1-.49-.4Zm-1.13 3.96a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z"/></svg>
+              <svg class="navigation__link-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="17" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 2.1a.67.67 0 0 0 0 1.34h1.77l.47 2.34v.05l.97 4.83a1.83 1.83 0 0 0 1.82 1.47h5.62a1.83 1.83 0 0 0 1.82-1.47l.93-4.86a.67.67 0 0 0-.66-.8h-9.3l-.47-2.36a.67.67 0 0 0-.66-.53H1.17Zm4.52 8.3-.81-4.06h8.23l-.78 4.07a.5.5 0 0 1-.49.39H6.18a.5.5 0 0 1-.49-.4Zm-1.13 3.96a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z"></svg>
               <span class="visually-hidden">Корзина.</span>
-              <span>2 товара</span>
+              <span class="navigation__text">2 товара</span>
+              <span class="navigation__text navigation__text--hidden">Нет товаров</span>
             </a>
+            <div class="popup cart popup--hidden">
+              <h2 class="popup__title">Корзина</h2>
+              <ul class="cart__list">
+                <li class="cart__item">
+                  <img class="cart__image" src="img/cart-raspberry.png" width="46" height="46" alt="Малинка.">
+                  <h3 class="cart__title">Малинка</h3>
+                  <p class="cart__cost-container">
+                    <span class="cart__weight-info">
+                      <output class="cart__weight">1</output> кг
+                    </span> х
+                    <span class="cart__cost-info">
+                      <output class="cart__cost">310</output> ₽
+                    </span>
+                  </p>
+                  <span class="cart__price-container">
+                    <output class="cart__price">310</output> ₽
+                  </span>
+                  <button class="cart__delete-item-button" type="button">
+                    <svg class="cart__delete-item-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.8 4.14a.67.67 0 1 0-.94-.94L8 7.06 4.14 3.2a.67.67 0 1 0-.94.94L7.06 8 3.2 11.86a.67.67 0 1 0 .94.94L8 8.94l3.86 3.86a.67.67 0 1 0 .94-.94L8.94 8l3.86-3.86Z"></svg>
+                    <span class="visually-hidden">Удалить из корзины.</span>
+                  </button>
+                </li>
+                <li class="cart__item">
+                  <img class="cart__image" src="img/cart-bubble-gum.png" width="46" height="46" alt="Бабл-гам.">
+                  <h3 class="cart__title">Бабл-гам</h3>
+                  <p class="cart__cost-container">
+                    <span class="cart__weight-info">
+                      <output class="cart__weight">1,5</output> кг
+                    </span> х
+                    <span class="cart__cost-info">
+                      <output class="cart__cost">320</output> ₽
+                    </span>
+                  </p>
+                  <span class="cart__price-container">
+                    <output class="cart__price">480</output> ₽
+                  </span>
+                  <button class="cart__delete-item-button" type="button">
+                    <svg class="cart__delete-item-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.8 4.14a.67.67 0 1 0-.94-.94L8 7.06 4.14 3.2a.67.67 0 1 0-.94.94L7.06 8 3.2 11.86a.67.67 0 1 0 .94.94L8 8.94l3.86 3.86a.67.67 0 1 0 .94-.94L8.94 8l3.86-3.86Z"></svg>
+                    <span class="visually-hidden">Удалить из корзины.</span>
+                  </button>
+                </li>
+              </ul>
+              <div class="cart__summary-container">
+                <button class="button button--extra" type="submit">Оформить заказ</button>
+                <p class="cart__total-value-container">
+                  <span class="cart__total-price">Итого:
+                    <output class="cart__total-value">790</output> ₽
+                  </span>
+                </p>
+              </div>
+            </div>
+            <div class="popup cart cart--empty popup--hidden">
+              <h2 class="popup__title popup__title--empty-cart">Ваша корзина пока пуста</h2>
+            </div>
           </li>
         </ul>
       </nav>
     </div>
   </header>
   <main class="main">
-    <div class="main__wrapper">
+    <div class="main__wrapper main__wrapper--catalog">
       <header class="inner-header">
         <ul class="breadcrumbs">
           <li class="breadcrumbs__item">
@@ -441,22 +533,19 @@
         <li class="footer__social-item social-item">
           <a class="social__link" href="https://t.me/htmlacademy" target="_blank">
             <span class="social__underlay"></span>
-            <svg class="social__icon" xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M26 14a12 12 0 1 1-24 0 12 12 0 0 1 24 0Zm-11.57-3.14c-1.17.48-3.5 1.49-7 3.01-.57.23-.86.45-.9.67-.04.36.42.5 1.04.7l.27.08c.6.2 1.43.44 1.86.45.39 0 .82-.16 1.3-.48 3.27-2.21 4.96-3.33 5.06-3.35.08-.02.18-.04.25.02.07.07.07.18.06.22-.05.19-1.84 1.86-2.77 2.72a28.24 28.24 0 0 0-.82.79c-.57.54-1 .96.02 1.63.5.32.89.59 1.28.85a88.77 88.77 0 0 0 1.8 1.23c.5.35.95.67 1.5.62.32-.03.66-.33.82-1.23.4-2.13 1.18-6.73 1.36-8.63.01-.16 0-.31-.02-.47a.5.5 0 0 0-.17-.33.78.78 0 0 0-.46-.14c-.46.01-1.15.25-4.48 1.64Z"><rect x="1" y="1" width="26" height="26" rx="13" stroke-width="2"></svg>
-            <span class="visually-hidden">Телеграм.</span>
+            <svg class="social__icon" xmlns="http://www.w3.org/2000/svg" width="28" height="28" role="img" aria-label="Телеграм." fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M26 14a12 12 0 1 1-24 0 12 12 0 0 1 24 0Zm-11.57-3.14c-1.17.48-3.5 1.49-7 3.01-.57.23-.86.45-.9.67-.04.36.42.5 1.04.7l.27.08c.6.2 1.43.44 1.86.45.39 0 .82-.16 1.3-.48 3.27-2.21 4.96-3.33 5.06-3.35.08-.02.18-.04.25.02.07.07.07.18.06.22-.05.19-1.84 1.86-2.77 2.72a28.24 28.24 0 0 0-.82.79c-.57.54-1 .96.02 1.63.5.32.89.59 1.28.85a88.77 88.77 0 0 0 1.8 1.23c.5.35.95.67 1.5.62.32-.03.66-.33.82-1.23.4-2.13 1.18-6.73 1.36-8.63.01-.16 0-.31-.02-.47a.5.5 0 0 0-.17-.33.78.78 0 0 0-.46-.14c-.46.01-1.15.25-4.48 1.64Z"/><rect x="1" y="1" width="26" height="26" rx="13" stroke-width="2"/></svg>
           </a>
         </li>
         <li class="footer__social-item">
           <a class="social__link" href="https://vk.com/htmlacademy" target="_blank">
             <span class="social__underlay"></span>
-            <svg class="social__icon" xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M26 14a12 12 0 1 1-24 0 12 12 0 0 1 24 0Zm-11.41 2.97h-.72s-1.58.09-2.98-1.18c-1.52-1.39-2.86-4.14-2.86-4.14s-.07-.18 0-.27c.1-.1.36-.1.36-.1l1.72-.01s.16.02.27.1c.1.05.15.17.15.17s.28.61.65 1.17c.71 1.08 1.05 1.32 1.29 1.2.35-.16.25-1.53.25-1.53s0-.5-.18-.71c-.14-.17-.41-.22-.53-.24-.1-.01.06-.2.26-.3.31-.13.86-.13 1.5-.13.5 0 .65.03.84.07.46.1.44.41.41 1.08l-.02.7v.18c-.01.34-.02.73.23.88.13.07.45 0 1.26-1.19.38-.56.66-1.23.66-1.23s.07-.12.16-.17c.1-.05.24-.04.24-.04h1.8s.54-.06.63.15c.1.23-.2.75-.94 1.61-.7.82-1.03 1.12-1 1.38.01.2.23.38.66.72.89.73 1.13 1.1 1.18 1.2l.01.01c.4.58-.44.62-.44.62l-1.6.02s-.34.06-.8-.2a3.94 3.94 0 0 1-.69-.6c-.33-.34-.65-.66-.91-.58-.45.12-.44.96-.44.96s0 .18-.1.28c-.1.1-.32.12-.32.12Z"><rect x="1" y="1" width="26" height="26" rx="13" stroke-width="2"></svg>
-            <span class="visually-hidden">ВКонтакте.</span>
+            <svg class="social__icon" xmlns="http://www.w3.org/2000/svg" width="28" height="28" role="img" aria-label="ВКонтакте." fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M26 14a12 12 0 1 1-24 0 12 12 0 0 1 24 0Zm-11.41 2.97h-.72s-1.58.09-2.98-1.18c-1.52-1.39-2.86-4.14-2.86-4.14s-.07-.18 0-.27c.1-.1.36-.1.36-.1l1.72-.01s.16.02.27.1c.1.05.15.17.15.17s.28.61.65 1.17c.71 1.08 1.05 1.32 1.29 1.2.35-.16.25-1.53.25-1.53s0-.5-.18-.71c-.14-.17-.41-.22-.53-.24-.1-.01.06-.2.26-.3.31-.13.86-.13 1.5-.13.5 0 .65.03.84.07.46.1.44.41.41 1.08l-.02.7v.18c-.01.34-.02.73.23.88.13.07.45 0 1.26-1.19.38-.56.66-1.23.66-1.23s.07-.12.16-.17c.1-.05.24-.04.24-.04h1.8s.54-.06.63.15c.1.23-.2.75-.94 1.61-.7.82-1.03 1.12-1 1.38.01.2.23.38.66.72.89.73 1.13 1.1 1.18 1.2l.01.01c.4.58-.44.62-.44.62l-1.6.02s-.34.06-.8-.2a3.94 3.94 0 0 1-.69-.6c-.33-.34-.65-.66-.91-.58-.45.12-.44.96-.44.96s0 .18-.1.28c-.1.1-.32.12-.32.12Z"/><rect x="1" y="1" width="26" height="26" rx="13" stroke-width="2"/></svg>
           </a>
         </li>
         <li class="footer__social-item">
           <a class="social__link" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
             <span class="social__underlay"></span>
-            <svg class="social__icon" xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"><path d="m16 13.8-2.8-1.32c-.25-.11-.45.01-.45.29v2.46c0 .28.2.4.45.29L16 14.2c.25-.12.25-.3 0-.42ZM14 2a12 12 0 1 0 0 24 12 12 0 0 0 0-24Zm0 16.88c-6.14 0-6.25-.56-6.25-4.88s.1-4.88 6.25-4.88c6.14 0 6.25.56 6.25 4.88s-.1 4.88-6.25 4.88Z"><rect x="1" y="1" width="26" height="26" rx="13" stroke-width="2"></svg>
-            <span class="visually-hidden">Ютьюб.</span>
+            <svg class="social__icon" xmlns="http://www.w3.org/2000/svg" width="28" height="28" role="img" aria-label="Ютьюб." fill="none"><path d="m16 13.8-2.8-1.32c-.25-.11-.45.01-.45.29v2.46c0 .28.2.4.45.29L16 14.2c.25-.12.25-.3 0-.42ZM14 2a12 12 0 1 0 0 24 12 12 0 0 0 0-24Zm0 16.88c-6.14 0-6.25-.56-6.25-4.88s.1-4.88 6.25-4.88c6.14 0 6.25.56 6.25 4.88s-.1 4.88-6.25 4.88Z"/><rect x="1" y="1" width="26" height="26" rx="13" stroke-width="2"/></svg>
           </a>
         </li>
       </ul>
@@ -486,5 +575,7 @@
       </div>
     </div>
   </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
