--- a/index-slide-2.html
+++ b/index-slide-2.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32.png">
     <title>HTML Academy: {{projectTitle}}</title>
   </head>
-  <body class="body">
+  <body class="body body--slide-2">
     <header class="header">
       <div class="header__wrapper">
         <a class="header__logo" href="#">
@@ -152,16 +152,13 @@
         <h1 class="visually-hidden">Магазин Глейси – магазин по продаже мороженого собственного производства на развес.</h1>
         <section class="slider">
           <div class="slider__description">
-            <h2 class="slider__title">Нежный пломбир <br>
-              с клубничным джемом</h2>
-            <p class="slider__text">Натуральное мороженое из свежих сливок <br>
-              и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи. </p>
+            <h2 class="slider__title">Сливочное мороженое со вкусом банана</h2>
+            <p class="slider__text">Сливочное мороженое с ярким банановым вкусом подарит вам свежесть и наслаждение даже в самый жаркий летний день.  </p>
             <button class="button button--primary" type="button">Заказать</button>
           </div>
           <ul class="slider__list">
-            <li class="slider__item slider__item--current">
-              <img class="slider__image" src="img/strawberyy-ice-cream.png" alt="Нежный пломбир
-              с клубничным джемом." width="327" height="507">
+            <li class="slider__item slider__item--slide-2 slider__item--current">
+              <img class="slider__image" src="img/banana-ice-cream.png" alt="Сливочное мороженое со вкусом банана." width="327" height="507">
               <button class="slider__button-arrow slider__button-arrow--left" type="button">
                 <svg class="slider__button-arrow-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M9.71 13.14a.67.67 0 0 0 .94-.95L6.45 8l4.2-4.2a.66.66 0 0 0-.94-.94L5.04 7.52a.66.66 0 0 0 0 .94l4.67 4.68Z"/></svg>
                 <span class="visually-hidden">Показать предыдущее изображение.</span>
@@ -171,22 +168,23 @@
                 <span class="visually-hidden">Показать следующее изображение.</span>
               </button>
             </li>
-            <li class="slider__item">
-              <img class="slider__image" src="img/banana-ice-cream--small.png" alt="Сливочное мороженое со вкусом банана." width="66" height="150">
-            </li>
-            <li class="slider__item">
-              <img class="slider__image" src="/img/caramel-ice-cream--small.png" alt="Карамельный пломбир
+            <li class="slider__item slider__item--slide-2">
+              <img class="slider__image" src="img/caramel-ice-cream--small.png" alt="Карамельный пломбир
               с маршмеллоу." width="66" height="150">
+            </li>
+            <li class="slider__item slider__item--slide-2">
+              <img class="slider__image" src="/img/strawberry-ice-cream--small.png" alt="Нежный пломбир
+              с клубничным джемом." width="66" height="150">
             </li>
           </ul>
           <ol class="slider__bullets-list">
             <li class="slider__bullet-item">
-              <button class="slider__bullet slider__bullet--current">
+              <button class="slider__bullet">
                 <span class="visually-hidden">1.</span>
               </button>
             </li>
             <li class="slider__bullet-item">
-              <button class="slider__bullet">
+              <button class="slider__bullet slider__bullet--current">
                 <span class="visually-hidden">2.</span>
               </button>
             </li>
